--- a/src/components/content/messanger/component-dialogs/dialog/Dialog.scss
+++ b/src/components/content/messanger/component-dialogs/dialog/Dialog.scss
@@ -1,13 +1,12 @@
 .dialog{
     display: flex;
     align-items: center;
-    margin-top: 5px;
     background-color: #f5f5f5;
     //box-shadow: 0 0 0 2px #48d1cc inset;
     border-radius: 10px;
     padding: 5px;
     transition: .2s linear;
-    &:hover{
+    &:hover, &.active{
         background-color: #48d1cc;
         box-shadow: 0 0 0 2px #48d1cc inset, 0 0 0 4px white inset;
     }
