--- a/src/components/content/messanger/component-messages/Messages.scss
+++ b/src/components/content/messanger/component-messages/Messages.scss
@@ -53,21 +53,26 @@
 
     .messages-input{
         grid-area: input;
-        display: flex;
+        display: grid;
+        grid-template-areas:
+        "text buttons";
+        grid-template-columns: 10fr 1fr;
         background-color: #f5f5f5;
         border-radius: 10px;
         padding: 5px;
-        align-items: center;
-        justify-content: space-between;
 
         .messages-input-text{
-            opacity: 0.5;
-            &:hover{
-                opacity: 1;
-            }
+            grid-area: text;
+            padding: 10px;
+            border: 1px solid #bdbdbd;
+            border-radius: 5px;
         }
 
         .messages-input-buttons{
+            grid-area: buttons;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             margin-right: 5px;
 
             img{
