--- a/src/App.scss
+++ b/src/App.scss
@@ -11,17 +11,25 @@
     row-gap: 10px;
     background-color: #f5f5f5;
     
+    // Динамичное Поле контента
+
     .app-content-wrapper{
         grid-area: content;
-        //Фиксирую ширину по fr
+
+        // Фиксирую ширину по fr
+
         min-width: 0;
         word-wrap: break-word;
         overflow-wrap: break-word;
-        //Фиксирую высоту по fr
+
+        // Фиксирую высоту по fr
+
         min-height: 0;
         word-wrap: break-word;
         overflow-wrap: break-word;
-        //----
+
+        //-----
+
         background-color: #ffffff;
         border-radius: 10px;
         padding: 10px;
